Archive2/1c/756a9f8e76d02d/output
main.cpp:2:6: warning: ISO C++ forbids declaration of 'main' with no type [-Wpedantic]
 main() 
      ^
main.cpp: In function 'int main()':
main.cpp:5:10: error: expected ';' before '{' token
     scanf{%f, %f, %f, &n1, &n2, &n3};
          ^
main.cpp:5:37: warning: statement is a reference, not call, to function 'scanf' [-Waddress]
     scanf{%f, %f, %f, &n1, &n2, &n3};
                                     ^
main.cpp:5:37: warning: statement has no effect [-Wunused-value]
main.cpp:6:10: error: expected ';' before '{' token
     scanf{%f, %f, %f, &p1, &p2, &p3}; 
          ^
main.cpp:6:37: warning: statement is a reference, not call, to function 'scanf' [-Waddress]
     scanf{%f, %f, %f, &p1, &p2, &p3}; 
                                     ^
main.cpp:6:37: warning: statement has no effect [-Wunused-value]
main.cpp:7:5: error: 'm' was not declared in this scope
     m=(n1*p1 + n2*p2 + n3*p3)/(p1 + p2 + p3);
     ^
main.cpp:8:27: warning: format '%f' expects a matching 'double' argument [-Wformat=]
     printf("m = %.1f/n, m");
                           ^
